// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serve fs output: 00 manifest.json 1`] = `
Object {
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content-script-loader.index.ts.hash.hash.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
    Object {
      "js": Array [
        "assets/content-script-loader.index.ts.hash2.hash.js",
      ],
      "matches": Array [
        "http://*/*",
        "https://*/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "0.1.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output: 01 output files 1`] = `
Array [
  "assets/content-script-client.hash.js",
  "assets/content-script-loader.index.ts.hash.hash.js",
  "assets/content-script-loader.index.ts.hash2.hash.js",
  "assets/index.ts.hash.css",
  "assets/index.ts.hash.js",
  "assets/index.ts.hash2.css",
  "assets/index.ts.hash2.js",
  "assets/precontroller.hash.js",
  "manifest.json",
]
`;

exports[`serve fs output: assets/content-script-client.hash.js 1`] = `
"let port;
setupPort();
setInterval(() => port?.postMessage({ type: \\"ping\\" }), 5e3);
setInterval(setupPort, 5 * 60 * 1e3);
function setupPort() {
  port?.disconnect();
  port = chrome.runtime.connect({ name: \\"@crx/client\\" });
  port.postMessage({ type: \\"connected\\", url: import.meta.url });
  port.onMessage.addListener(handlePortMessage);
}
function handlePortMessage(payload) {
  switch (payload.type) {
    case \\"connected\\":
      console.log(\\"[vite-crx] connected.\\");
      break;
    case \\"custom\\":
      if (payload.event === \\"runtime-reload\\")
        handleRuntimeReload();
      break;
    default:
      console.log(\\"[vite]\\", payload);
      break;
  }
}
function handleRuntimeReload() {
  console.log(\\"[vite-crx] runtime reload.\\");
  setTimeout(() => location.reload(), 1e3);
}
"
`;

exports[`serve fs output: assets/content-script-loader.index.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/index.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content-script-loader.index.ts.hash2.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/index.ts.hash2.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/index.ts.hash.css 1`] = `
"body {
  color: red;
}
"
`;

exports[`serve fs output: assets/index.ts.hash.js 1`] = `
"var styles = '';

console.log(\\"content1\\");
"
`;

exports[`serve fs output: assets/index.ts.hash2.css 1`] = `
"body {
  color: blue;
}
"
`;

exports[`serve fs output: assets/index.ts.hash2.js 1`] = `
"var styles = '';

console.log(\\"content2\\");
"
`;

exports[`serve fs output: assets/precontroller.hash.js 1`] = `
"setTimeout(() => location.reload(), 100);
"
`;
